# ds_20242_g2

./: README.md  ptCrtPrj_g2.odt
ADP/: Definição de projeto.md
Apresentacoes/: EcoAlerta Domínios.pptx
Código Fonte/: .envrc  .gitignore  README.md  manage.py  pyproject.toml
Código Fonte/bairros/: models.py  urls.py  views.py
Código Fonte/bairros/migrations/: 0001_initial.py  0002_remove_endereco_cidade_remove_endereco_estado_and_more.py  0003_endereco_id_alter_endereco_cep.py
Código Fonte/bairros/templates/: bairro_selecao.html  enderecos_por_regiao.html
Código Fonte/ecoalerta/: asgi.py  settings.py  urls.py  wsgi.py
Código Fonte/processos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Código Fonte/processos/migrations/: 0001_initial.py  0002_initial.py  0003_alter_parecertecnico_tecnico.py  0003_alter_processo_endereco.py  0004_merge_20241213_0010.py  0005_remove_documento_imagem_documento_documento.py
Código Fonte/processos/templates/: historico_relatorios.html  novo_processo.html  teste.css  visualizar_relatorio.html
Código Fonte/processos/templates/processos/: processo_form.html  processo_list.html
Código Fonte/templates/: base-bootstrap.html  base.html
Código Fonte/usuarios/: admin.py  models.py  urls.py
Código Fonte/usuarios/migrations/: 0001_initial.py  0002_initial.py  0003_alter_usuario_cpf.py  0004_alter_tecnico_matricula.py
Código Fonte/usuarios/templates/usuarios/: login.html
Documentos/ADP/: Definição de projeto.md
Documentos/Historias de Usuário/: HU-001.md  HU-002md  HU-003.md  HU-004.md  HU-005.md  HU-006.md  HU-007.md  HU-008.md  HU-009.md  HU-010.md  HU-011.md
Historias de Usuário/: HU-001.md  HU-002.md  HU-003.md  HU-004.md  HU-005.md
Protótipos/: Telas Cadastro do Reporte
Protótipos/Históricos Reportes/: ReadMe
Protótipos/Tela Reporte/: ReadMe
(+1 files in other folders)
