[tool.poetry]
name = "eco-alerta"
version = "0.1.0"
description = ""
authors = ["Augusto Moura <me@augustomoura.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"


[tool.poetry.group.dev.dependencies]
djlint = "^1.36.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
