[tool.poetry]
name = "eco-alerta"
version = "0.1.0"
description = ""
authors = ["Augusto Moura <me@augustomoura.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
pillow = "^11.0.0"
django-polymorphic = "^3.1.0"
setuptools = "^75.6.0"
django-cpf = "^0.1.0"
requests = "^2.32.3"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"


[tool.poetry.group.dev.dependencies]
djlint = "^1.36.1"
black = "^24.10.0"
ipython = "^8.30.0"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "ecoalerta.settings"
